# exercise-1-chess-Louyhaibb

./: CMakeLists.txt
Chess/: CMakeLists.txt
Chess/include/: Bishop.h  Chess.h  Chews.h  Gamelogic.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
Chess/src/: Bishop.cpp  CMakeLists.txt  Chess.cpp  Gamelogic.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  main.cpp
עותק של Chess/: CMakeLists.txt
עותק של Chess/include/: Bishop.h  Gamelogic.h  King.h  Knight.h  Pawn.h  Piece.h  Rook.h
עותק של Chess/src/: Bishop.cpp  Knight.cpp  Piece.cpp  Queen.cpp
